troubleshooting: theme-color

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/close_temp.jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#238636" />
+  <meta name="theme-color" content="#ffff" />
   <meta name="description" content="Close App" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
